--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body style="font-family: JetBrains Mono; font-size: xx-large;">
-    <img src="data:image/png;base64, {data}" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
-    <p style="text-align: center;">{location}-{lesson}</p>
+    <img src="data:image/png;base64, {}" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+    <p style="text-align: center;">{}-{}</p>
 </body>
 </html>
